--- a/package.json
+++ b/package.json
@@ -11,13 +11,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
     "expo": "^53.0.7",
+    "expo-constants": "~17.1.5",
+    "expo-linking": "~7.1.4",
+    "expo-router": "~5.0.5",
     "expo-status-bar": "~2.2.3",
     "nativewind": "latest",
     "react": "19.0.0",
+    "react-hook-form": "^7.56.2",
     "react-native": "0.79.2",
     "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "5.4.0"
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.10.0",
+    "react-native-svg": "15.11.2",
+    "zod": "^3.24.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -35,6 +43,6 @@
     "extends": "universe/native",
     "root": true
   },
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "expo-router/entry",
   "private": true
 }
