--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
+    "axios": "^1.9.0",
     "expo": "^53.0.7",
     "expo-constants": "~17.1.5",
     "expo-linking": "~7.1.4",
