--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
     "axios": "^1.9.0",
+    "dotenv": "^16.5.0",
     "expo": "^53.0.7",
     "expo-constants": "~17.1.5",
     "expo-linking": "~7.1.4",
