--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
     "react-native-svg": "15.11.2",
-    "zod": "^3.24.4"
+    "zod": "^3.24.4",
+    "expo-navigation-bar": "~4.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
