--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-native-screens": "~4.10.0",
     "react-native-svg": "15.11.2",
     "zod": "^3.24.4",
-    "expo-navigation-bar": "~4.2.4"
+    "expo-navigation-bar": "~4.2.4",
+    "expo-secure-store": "~14.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
