--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "@hookform/resolvers": "^5.0.1",
     "axios": "^1.9.0",
     "dotenv": "^16.5.0",
-    "expo": "53.0.9",
     "expo-blur": "^14.1.4",
     "expo-constants": "~17.1.6",
     "expo-linear-gradient": "^14.1.4",
     "expo-linking": "~7.1.5",
+    "expo-navigation-bar": "~4.2.4",
     "expo-router": "~5.0.7",
+    "expo-secure-store": "~14.2.3",
     "expo-status-bar": "~2.2.3",
     "nativewind": "latest",
     "react": "19.0.0",
@@ -29,9 +30,7 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
     "react-native-svg": "15.11.2",
-    "zod": "^3.24.4",
-    "expo-navigation-bar": "~4.2.4",
-    "expo-secure-store": "~14.2.3"
+    "zod": "^3.24.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -40,6 +39,7 @@
     "@typescript-eslint/parser": "^7.7.0",
     "eslint": "^8.57.0",
     "eslint-config-universe": "^12.0.1",
+    "expo": "^53.0.9",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "tailwindcss": "^3.4.0",
