--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-router": "~5.0.7",
     "expo-secure-store": "~14.2.3",
     "expo-status-bar": "~2.2.3",
+    "jwt-decode": "^4.0.0",
     "nativewind": "latest",
     "react": "19.0.0",
     "react-hook-form": "^7.56.2",
