--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-router": "~5.0.7",
     "expo-secure-store": "~14.2.3",
     "expo-status-bar": "~2.2.3",
+    "lucide-react-native": "^0.512.0",
     "nativewind": "latest",
     "react": "19.0.0",
     "react-hook-form": "^7.56.2",
@@ -29,7 +30,7 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
-    "react-native-svg": "15.11.2",
+    "react-native-svg": "^15.11.2",
     "zod": "^3.24.4"
   },
   "devDependencies": {
