--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "expo-blur": "^14.1.4",
+    "expo-checkbox": "~4.1.4",
     "expo-constants": "~17.1.6",
     "expo-linear-gradient": "^14.1.4",
     "expo-linking": "~7.1.5",
@@ -29,6 +30,8 @@
     "react": "19.0.0",
     "react-hook-form": "^7.56.2",
     "react-native": "0.79.2",
+    "react-native-element-dropdown": "^2.12.4",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
