--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native": "0.79.2",
     "react-native-element-dropdown": "^2.12.4",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-paper": "^5.14.5",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
