--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
+    "@react-navigation/native": "^7.1.14",
+    "@react-navigation/stack": "^7.4.2",
     "axios": "^1.9.0",
     "dotenv": "^16.5.0",
     "expo-blur": "^14.1.4",
@@ -28,7 +30,7 @@
     "react-hook-form": "^7.56.2",
     "react-native": "0.79.2",
     "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "5.4.0",
+    "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.10.0",
     "react-native-svg": "^15.11.2",
     "zod": "^3.24.4"
