--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "react-hook-form": "^7.56.2",
     "react-native": "0.79.2",
     "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "^5.4.0",
+    "react-native-safe-area-context": "^5.5.0",
     "react-native-screens": "~4.10.0",
     "react-native-svg": "^15.11.2",
     "react-native-vector-icons": "^10.2.0",
@@ -38,6 +38,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@react-native-community/cli": "^18.0.0",
     "@types/react": "~19.0.10",
     "@types/react-native-vector-icons": "^6.4.18",
     "@typescript-eslint/eslint-plugin": "^7.7.0",
