--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/datetimepicker": "^8.4.1",
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.5.0",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.6",
+    "expo-image-picker": "~16.1.4",
     "expo-linear-gradient": "^14.1.4",
     "expo-linking": "~7.1.5",
     "expo-navigation-bar": "~4.2.4",
@@ -35,6 +38,7 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
     "react-native-svg": "15.11.2",
+    "react-native-uuid": "^2.0.3",
     "react-native-vector-icons": "^10.2.0",
     "zod": "^3.24.4"
   },
