--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-hook-form": "^7.56.2",
     "react-native": "0.79.2",
     "react-native-element-dropdown": "^2.12.4",
+    "react-native-markdown-display": "^7.0.2",
     "react-native-paper": "^5.14.5",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "^5.5.0",
