--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "react-native-svg": "15.11.2",
     "react-native-uuid": "^2.0.3",
     "react-native-vector-icons": "^10.2.0",
-    "zod": "^3.24.4"
+    "zod": "^3.24.4",
+    "expo-location": "~18.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
