Actualizar nombre y esquema de la aplicación a "Medi+" y "mediplus"; mejorar manejo de permisos de ubicación en varios componentes

--- a/app.json
+++ b/app.json
@@ -1,9 +1,9 @@
 {
   "expo": {
-    "name": "app-postcare",
-    "slug": "app-postcare",
+    "name": "Medi+",
+    "slug": "mediplus",
     "version": "1.0.0",
-    "scheme": "postcare",
+    "scheme": "mediplus",
     "web": {
       "favicon": "./assets/favicon.png"
     },
